--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,14 @@ defaults:
 
         scope:
                 path: "" # all files in project
-                type: "posts"
+                type: ""
         values:
                 name: Jason Smith
                 markdown: kramdown
+
+        scope:
+                path: ""
+                type: "posts"
+        values:
+                permalink: /blog/:year/:month/:day/:title
 
